<resources>
    <string name="buscar_por_titulo">Buscar por titulo</string>
    <string name="ingresar_anio">Ingresar anio</string>
    <string name="filtrar">Filtrar</string>
    <string name="app_name">Mi Aplicacion de Peliculas</string>
    <string name="t_tulo_de_la_pel_cula">Título de la Película</string>
    <string name="fecha_de_estreno">Fecha de Estreno</string>
    <string name="actores">Actores:</string>
    <string name="mi_aplicaci_n">Mi Aplicación</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="inicio">Películas Favoritas</string>
    <string name="peliculas_ver">Películas para ver</string>
    <string name="series_ver">Series para ver</string>
    <string name="series_favoritas">Series Favoritas</string>
    <string name="pel_culas">Películas</string>
    <string name="series">Series</string>
</resources>