<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/black">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <!-- Carátula con sombra sutil -->
        <ImageView
            android:id="@+id/imageViewCaratulaDetalle"
            android:layout_width="300dp"
            android:layout_height="450dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_placeholder" />

        <!-- Título de la película -->
        <TextView
            android:id="@+id/textViewTituloDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_tulo_de_la_pel_cula"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_marginBottom="8dp"/>

        <!-- Fecha de estreno -->
        <TextView
            android:id="@+id/textViewFechaDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha_de_estreno"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="8dp"/>


        <TextView
            android:id="@+id/textViewActoresDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/actores"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <!-- Descripción de la película -->
        <TextView
            android:id="@+id/textViewDescripcionDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Descripción de la película..."
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="12dp" />

    </LinearLayout>
</ScrollView>
