<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.MediaActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:title="Películas"
            app:titleTextColor="@android:color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Botón para mostrar/ocultar filtros -->
        <Button
            android:id="@+id/btnToggleFiltros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Buscar"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="16dp" />

        <!-- Contenedor de filtros -->
        <LinearLayout
            android:id="@+id/layoutFiltros"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/btnToggleFiltros"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/buscar_por_titulo"
                android:textColor="#000000"
                android:textColorHint="#666666"
                android:textSize="16sp"
                android:padding="12dp"
                android:background="@drawable/rounded_edittext_light" />

            <Spinner
                android:id="@+id/spinnerGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SpinnerStyle"
                android:background="@drawable/rounded_edittext_light"
                android:layout_marginTop="12dp" />

            <EditText
                android:id="@+id/editTextAnio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingresar_anio"
                android:inputType="number"
                android:textColor="#000000"
                android:textColorHint="#666666"
                android:textSize="16sp"
                android:padding="12dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded_edittext_light" />

            <Button
                android:id="@+id/btnFiltrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filtrar"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:padding="12dp"
                android:layout_marginTop="20dp"/>
        </LinearLayout>

        <!-- RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPeliculas"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/layoutFiltros"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Menú lateral -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/nav_menu"
        android:background="#FFFFFF"
        app:headerLayout="@layout/nav_header"/>
</androidx.drawerlayout.widget.DrawerLayout>
